# cezdev

./: cezdev.bat  package-lock.json
ccore/c3dclasses/ccore/cconstructs/ccsv/ccsv/: CCSVUnitTest.java
ccore/c3dclasses/ccore/cconstructs/cunittest/: CUnitTest.java
ccore/c3dclasses/ccore/cconstructs/cvar/: CVar.java  CVarUnitTest.java  cmemory-test1.json
ccore/c3dclasses/ccore/cconstructs/cvar/cvarcmds/: CDeleteVarCommand.java  CGetVarCommand.java  CListVarsCommand.java  CSetVarCommand.java  cvar.delete.bat  cvar.get.bat  cvar.list.bat  cvar.set.bat  (+3 more)
ccore/c3dclasses/csystem/cdevice/cmemory/: CJSONMemoryDriver.java  CMemory.java  cmemory-test.json  json_driver.java  json_driver.json
ccore/c3dclasses/csystem/cui/ccontrols/: CControlsSchemaRender.java  CControlsSchemaRenderProgram.java
ccore/cezdev/: PrintSelectedPathCommand.java  __.bat  call.bat  cezdev.create.bat  printselectedpath.bat  scripts.call.bat
cplatform/cenvironments/cjava/: cjava.bat  cjava.create.bat  cjava.modified.bat  cjava.update.bat  cjavac.bat  cmvn.bat
cplatform/cenvironments/cjs/: CJSCompileCommand.java  cjs.bat  cjs.create.bat  cjs.destroy.bat  cjs.modified.bat  cjs.read.bat  cjs.update.bat  cjscompile.bat  cjscopy.bat  cjsdestroy.bat  cjsinit.bat  cjsrun.bat  version.json
cplatform/cenvironments/cjs/config/: .babelrc.tmp  App.js  index.tmp.html  package.tmp.json  properties.json  webpack.config.tmp.js
cplatform/cenvironments/cpy/: README.md  cpip.bat  cpy.bat  cpy.create.bat  cpy.modified.bat  cpy.update.bat  pyproject.toml  setup.cfg
cplatform/cprojects/plone/: start-volto-gp.bat
(+6 files in other folders)
