[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "c3dclasses"
version = "0.1.0"
description = "C3D Classes SDK for Python"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
  { name = "C3DClasses Team" }
]

dependencies = [
]

[project.urls]
Homepage = "https://example.com/c3dclasses"
